--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
       <div class="row">
 
         <div class="features-box col-lg-4">
-          <i class="icon fas fa-check-circle fa-4x"></i>
+          <i class="icon fas fa-check-circle fa-3x"></i>
           <h3>Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="features-box col-lg-4">
-          <i class="icon fas fa-bullseye fa-4x"></i>
+          <i class="icon fas fa-bullseye fa-3x"></i>
           <h3>Elite Clientele.</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
 
         <div class="features-box col-lg-4">
-          <i class="icon fas fa-heart fa-4x"></i>
+          <i class="icon fas fa-heart fa-3x"></i>
           <h3>Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
@@ -94,7 +94,7 @@
 
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
             <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
             <em>Pebbles, New York</em>
           </div>
@@ -131,18 +131,18 @@
 
     <section id="pricing">
 
-      <h2>A Plan for Every Dog's Needs</h2>
+      <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
 
       <div class="row">
-
+        
         <div class="pricing-column col-lg-4">
           <div class="card">
             <div class="card-header">
               <h3>Chihuahua</h3>
             </div>
             <div class="card-body">
-              <h2>Free</h2>
+              <h2 class="price-text">Free</h2>
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
@@ -159,7 +159,7 @@
               <h3>Labrador</h3>
             </div>
             <div class="card-body">
-              <h2>$49 / mo</h2>
+              <h2 class="price-text">$49 / mo</h2>
               <p>Pirority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited App Usage</p>
@@ -176,7 +176,7 @@
               <h3>Mastiff</h3>
             </div>
             <div class="card-body">
-              <h2>$99 / mo</h2>
+              <h2 class="price-text">$99 / mo</h2>
               <p>Pirority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited Matches</p>
