--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
 
         <div class="features-box col-lg-4">
           <i class="icon fas fa-check-circle fa-3x"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="features-title">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="features-box col-lg-4">
           <i class="icon fas fa-bullseye fa-3x"></i>
-          <h3>Elite Clientele.</h3>
+          <h3 class="features-title">Elite Clientele.</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
 
         <div class="features-box col-lg-4">
           <i class="icon fas fa-heart fa-3x"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="features-title">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
 
@@ -135,7 +135,7 @@
       <p>Simple and affordable price plans for your and your dog.</p>
 
       <div class="row">
-        
+
         <div class="pricing-column col-lg-4">
           <div class="card">
             <div class="card-header">
@@ -194,7 +194,7 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button type="button" class="btn btn-lg btn-dark download-button"><i class="fab fa-apple cta-icon"></i>Download</button>
       <button type="button" class="btn btn-lg btn-outline-light download-button"><i class="fab fa-google-play cta-icon"></i>Download</button>
     </section>
