--- a/index.html
+++ b/index.html
@@ -63,26 +63,29 @@
     <!-- Features -->
 
     <section id="features">
-      <div class="row">
+      <div class="container-fluid">
 
-        <div class="features-box col-lg-4">
-          <i class="icon fas fa-check-circle fa-3x"></i>
-          <h3 class="features-title">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+        <div class="row">
+
+          <div class="features-box col-lg-4">
+            <i class="icon fas fa-check-circle fa-4x"></i>
+            <h3 class="features-title">Easy to use.</h3>
+            <p>So easy to use, even your dog could do it.</p>
+          </div>
+
+          <div class="features-box col-lg-4">
+            <i class="icon fas fa-bullseye fa-4x"></i>
+            <h3 class="features-title">Elite Clientele.</h3>
+            <p>We have all the dogs, the greatest dogs.</p>
+          </div>
+
+          <div class="features-box col-lg-4">
+            <i class="icon fas fa-heart fa-4x"></i>
+            <h3 class="features-title">Guaranteed to work.</h3>
+            <p>Find the love of your dog's life or your money back.</p>
+          </div>
+
         </div>
-
-        <div class="features-box col-lg-4">
-          <i class="icon fas fa-bullseye fa-3x"></i>
-          <h3 class="features-title">Elite Clientele.</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
-        </div>
-
-        <div class="features-box col-lg-4">
-          <i class="icon fas fa-heart fa-3x"></i>
-          <h3 class="features-title">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
-        </div>
-
       </div>
     </section>
 
@@ -93,12 +96,12 @@
       <div id="testimonials-carousel" class="carousel slide" data-bs-ride="false">
 
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active container-fluid">
             <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
             <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
             <em>Pebbles, New York</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
             <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
             <em>Beverly, Illinois</em>
@@ -194,19 +197,23 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button" class="btn btn-lg btn-dark download-button"><i class="fab fa-apple cta-icon"></i>Download</button>
-      <button type="button" class="btn btn-lg btn-outline-light download-button"><i class="fab fa-google-play cta-icon"></i>Download</button>
+      <div class="container-fluid">
+        <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+        <button type="button" class="btn btn-lg btn-dark download-button"><i class="fab fa-apple cta-icon"></i>Download</button>
+        <button type="button" class="btn btn-lg btn-outline-light download-button"><i class="fab fa-google-play cta-icon"></i>Download</button>
+      </div>
     </section>
 
     <!-- Footer -->
 
     <section id="footer">
-      <i class="social-icon fab fa-twitter"></i>
-      <i class="social-icon fab fa-facebook-square"></i>
-      <i class="social-icon fab fa-instagram"></i>
-      <i class="social-icon fas fa-envelope"></i>
-      <p>© Copyright 2021 TinDog</p>
+      <div class="container-fluid">
+        <i class="social-icon fab fa-twitter"></i>
+        <i class="social-icon fab fa-facebook-square"></i>
+        <i class="social-icon fab fa-instagram"></i>
+        <i class="social-icon fas fa-envelope"></i>
+        <p>© Copyright 2021 TinDog</p>
+      </div>
     </section>
 
 
