--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="css/styles.css">
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400&family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-
     <title>TinDog</title>
   </head>
 
   <body>
     <!-- Title Section  -->
-    <section id="title">
+    <section class="colored-section" id="title">
       <div class="container-fluid">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -62,7 +58,7 @@
 
     <!-- Features -->
 
-    <section id="features">
+    <section class="white-section" id="features">
       <div class="container-fluid">
 
         <div class="row">
@@ -92,7 +88,7 @@
 
     <!-- Testimonials -->
 
-    <section id="testimonials">
+    <section class="colored-section" id="testimonials">
       <div id="testimonials-carousel" class="carousel slide" data-bs-ride="false">
 
         <div class="carousel-inner">
@@ -120,7 +116,7 @@
 
     <!-- Press -->
 
-    <section id="press">
+    <section class="colored-section" id="press">
       <div>
         <img class="press-logo" src="images/TechCrunch.png" alt="techcrunch-logo">
         <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
@@ -132,7 +128,7 @@
 
     <!-- Pricing -->
 
-    <section id="pricing">
+    <section class="white-section" id="pricing">
 
       <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
@@ -196,7 +192,7 @@
 
     <!-- Call to Action -->
 
-    <section id="cta">
+    <section class="colored-section" id="cta">
       <div class="container-fluid">
         <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
         <button type="button" class="btn btn-lg btn-dark download-button"><i class="fab fa-apple cta-icon"></i>Download</button>
@@ -206,7 +202,7 @@
 
     <!-- Footer -->
 
-    <section id="footer">
+    <section class="white-section" id="footer">
       <div class="container-fluid">
         <i class="social-icon fab fa-twitter"></i>
         <i class="social-icon fab fa-facebook-square"></i>
